# minLLM

./: LICENSE  README.md  TODO.md  config.ini  data.py  main.py  model.py  pyproject.toml  sample_corpus_zh.txt  train.py
checkpoints/: minllm.pt
