[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minllm"
version = "0.1.0"
description = "A tiny educational LLM project for learning training and tuning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
]

[tool.setuptools]
py-modules = ["main", "model", "data", "train"]
